<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">NoteX</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_header_welcome">Welcome back \n to <font color="#25FF8E">Note X</font></string>
    <string name="txt_login_to_access_your_notes">Login to access your notes</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_header_create_new_account">Create New Account</string>
    <string name="txt_please_provide_all_the_required_information">Please provide all the required information</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_login">Login</string>
    <string name="txt_don_t_have_an_account_register_now">Don\'t have an account? <font color="#25FF8E">Register Now</font></string>
    <string name="txt_title">Title</string>
    <string name="txt_type_your_title">Type your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_submit">Submit</string>
</resources>